--- a/app/src/main/res/layout/activity_desenvolvimento.xml
+++ b/app/src/main/res/layout/activity_desenvolvimento.xml
@@ -21,27 +21,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:showIn="@layout/activity_main">
+    <include layout="@layout/content_desenvolvimento" />
 
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:id="@+id/imageView"
-            android:background="@drawable/icon_app"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"/>
-
-        <TextView
-            android:layout_centerHorizontal="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Em desenvolvimento"
-            android:layout_below="@id/imageView"/>
-
-        </RelativeLayout>
 
 </android.support.design.widget.CoordinatorLayout>
