Wilson - Criando layout dinamico das toolbar para evitar de replicar código entre telas, já que a maioria das telas vai possuir uma toolbar.

--- a/app/src/main/res/layout/activity_desenvolvimento.xml
+++ b/app/src/main/res/layout/activity_desenvolvimento.xml
@@ -11,13 +11,9 @@
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            android:logo="@drawable/icon_app"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+        <include
+            android:id="@+id/includeToolbar"
+            layout="@layout/layout_toolbar" />
 
     </android.support.design.widget.AppBarLayout>
 
