--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,8 +47,8 @@
             android:layout_below="@+id/tabLayout"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
-        </android.support.v4.view.ViewPager>
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
     </RelativeLayout>
 
 </android.support.design.widget.CoordinatorLayout>
