--- a/app/src/main/res/layout/fragment_grid_animal.xml
+++ b/app/src/main/res/layout/fragment_grid_animal.xml
@@ -5,13 +5,13 @@
     android:orientation="horizontal">
 
     <GridView
-        android:id="@+id/gridViewCaes"
+        android:id="@+id/gridView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="5dp"
         android:columnWidth="20dp"
         android:horizontalSpacing="5dp"
         android:numColumns="2"
-        android:layout_margin="5dp"
         android:stretchMode="columnWidth"
         android:verticalSpacing="5dp" />
 
