--- a/app/src/main/res/layout/grid_animal_detalhes.xml
+++ b/app/src/main/res/layout/grid_animal_detalhes.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="br.com.edu.ifsc.ajinhocompatas.view.animal_detalhes">
+    tools:context="br.com.edu.ifsc.ajinhocompatas.view.Animal_detalhes">
 
     <ImageView
         android:id="@+id/imagemDetalhesId"
@@ -19,7 +19,7 @@
         app:srcCompat="@drawable/icon_app_t" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonAdotarId"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="382dp"
         android:layout_height="52dp"
