Wilson - Tela simplificada de login

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#03a9f4</color>
     <color name="colorPrimaryDark">#03a8f3</color>
     <color name="colorPrimaryLight">#B3E5FC</color>
-    <color name="colorAccent">#c0321f</color>
+    <color name="colorAccent">#4b3fce</color>
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#757575</color>
     <color name="icons">#FFFFFF</color>
