--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -6,20 +6,18 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginBottom="0dp"
-    android:layout_marginTop="0dp"
-    android:layout_marginLeft="4dp"
-    android:layout_marginRight="4dp"
+    android:layout_height="wrap_content"
+    android:layout_margin="4dp"
     app:cardElevation="3dp"
     app:cardUseCompatPadding="false"
     app:cardPreventCornerOverlap="false"
     app:cardMaxElevation="3dp"
-    app:cardCornerRadius="4dp">
+    app:cardCornerRadius="4dp"
+    android:clickable="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <ImageView
