--- a/app/src/main/res/layout/grid_animal_detalhes.xml
+++ b/app/src/main/res/layout/grid_animal_detalhes.xml
@@ -55,22 +55,22 @@
         android:layout_height="wrap_content"
         android:text="Tamanho:"
         android:textSize="14sp"
-        tools:layout_editor_absoluteX="16dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView4" />
+        android:layout_marginLeft="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        tools:layout_editor_absoluteY="339dp" />
 
     <TextView
         android:id="@+id/racaAnimalId"
         android:layout_width="209dp"
         android:layout_height="17dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        tools:layout_editor_absoluteY="303dp"
+        app:layout_constraintLeft_toRightOf="@+id/textView"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toRightOf="@+id/textView"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteY="303dp" />
+        app:layout_constraintHorizontal_bias="0.0" />
 
     <TextView
         android:id="@+id/textView4"
@@ -93,21 +93,33 @@
         android:id="@+id/tamanhoAnimalId"
         android:layout_width="209dp"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="89dp"
-        tools:layout_editor_absoluteY="337dp" />
+        tools:layout_editor_absoluteY="339dp"
+        app:layout_constraintLeft_toRightOf="@+id/textView2"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.024" />
 
     <TextView
         android:id="@+id/corAnimalId"
         android:layout_width="209dp"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="51dp"
-        tools:layout_editor_absoluteY="369dp" />
+        tools:layout_editor_absoluteY="369dp"
+        app:layout_constraintLeft_toRightOf="@+id/textView4"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.008" />
 
     <TextView
         android:id="@+id/idadeAnimalId"
         android:layout_width="209dp"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="66dp"
-        tools:layout_editor_absoluteY="401dp" />
+        tools:layout_editor_absoluteY="401dp"
+        app:layout_constraintLeft_toRightOf="@+id/textView5"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.085" />
 
 </android.support.constraint.ConstraintLayout>
