--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -76,16 +76,30 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="10dp"
+            android:paddingTop="10dp"
             android:autoLink="all"
             android:text="@string/label_cadastre_se"
             android:textAlignment="center"
             android:textSize="16dp" />
 
+        <TextView
+            android:id="@+id/textViewCadastrese"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:autoLink="all"
+            android:text="ou"
+            android:layout_marginBottom="10dp"
+            android:textAlignment="center"
+            android:textSize="16dp" />
+
         <com.facebook.login.widget.LoginButton
             android:id="@+id/loginButton"
+            android:layout_gravity="center"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:paddingTop="14dp"
+            android:paddingBottom="14dp"
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
