--- a/app/src/main/res/layout/activity_cadastro_animal.xml
+++ b/app/src/main/res/layout/activity_cadastro_animal.xml
@@ -55,24 +55,6 @@
         android:layout_marginTop="23dp"
         app:layout_constraintTop_toBottomOf="@+id/spinnerCadastroAnimalCorId" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="344dp"
-        android:layout_height="wrap_content"
-        android:fontFamily="cursive"
-        android:text="Cadastro de animal"
-        android:textAlignment="center"
-        android:textSize="24sp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="28dp"
-        app:layout_constraintHorizontal_bias="0.0"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
-
     <EditText
         android:id="@+id/cadastroAnimalNomeId"
         android:layout_width="340dp"
@@ -86,8 +68,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginTop="34dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        android:layout_marginTop="17dp"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <TextView
         android:id="@+id/textView6"
@@ -160,19 +142,21 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:text="Gato"
-        app:layout_constraintHorizontal_bias="0.758"
+        app:layout_constraintHorizontal_bias="0.733"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/checkBoxCaoId"
-        tools:layout_editor_absoluteY="145dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="151dp" />
 
     <CheckBox
         android:id="@+id/checkBoxCaoId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Cachorro"
-        tools:layout_editor_absoluteY="145dp"
         android:layout_marginEnd="67dp"
-        tools:layout_editor_absoluteX="199dp" />
+        tools:layout_editor_absoluteX="190dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="151dp" />
 
     <Button
         android:id="@+id/botaoCadastrarAnimalId"
@@ -187,7 +171,8 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.333" />
 
     <Button
         android:id="@+id/botaoEnviarImagemId"
@@ -201,5 +186,17 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="18dp"
         app:layout_constraintTop_toBottomOf="@+id/spinnerCadastroAnimalIdadeId" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="70dp"
+        android:layout_height="65dp"
+        app:srcCompat="@drawable/icon_app"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp" />
 
 </android.support.constraint.ConstraintLayout>
