--- a/app/src/main/res/layout/activity_cadastro_animal.xml
+++ b/app/src/main/res/layout/activity_cadastro_animal.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:layout_editor_absoluteY="81dp"
+    tools:layout_editor_absoluteX="0dp">
 
     <Spinner
         android:id="@+id/spinnerCadastroAnimalRacaId"
@@ -11,111 +13,121 @@
         android:layout_height="24dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="28dp"
-        app:layout_constraintTop_toBottomOf="@+id/checkBoxGatoId"
-        app:layout_constraintLeft_toRightOf="@+id/textView8"
-        android:layout_marginLeft="12dp"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.0" />
+        app:layout_constraintLeft_toRightOf="@+id/textView8"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_marginTop="33dp"
+        app:layout_constraintTop_toBottomOf="@+id/checkBoxGatoId" />
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
         android:text="Raça:"
-        android:textColor="@color/material_drawer_dark_icons"
         android:textSize="18sp"
+        android:layout_marginLeft="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        tools:layout_editor_absoluteY="205dp" />
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="33dp"
+        app:layout_constraintTop_toBottomOf="@+id/checkBoxCaoId" />
 
     <TextView
         android:id="@+id/textView13"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Enviar imagem:"
-        android:textColor="@color/material_drawer_dark_icons"
         android:textSize="18sp"
-        tools:layout_editor_absoluteY="392dp"
         android:layout_marginLeft="16dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBaseline_toBaselineOf="@+id/botaoEnviarImagemId"
+        android:layout_marginStart="16dp" />
 
     <Spinner
         android:id="@+id/spinnerCadastroAnimalIdadeId"
         android:layout_width="207dp"
         android:layout_height="24dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toRightOf="@+id/textView6"
+        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="23dp"
+        app:layout_constraintLeft_toRightOf="@+id/textView6"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintHorizontal_bias="0.057"
+        android:layout_marginTop="19dp"
         app:layout_constraintTop_toBottomOf="@+id/spinnerCadastroAnimalCorId" />
+
+
 
     <EditText
         android:id="@+id/cadastroAnimalNomeId"
-        android:layout_width="340dp"
-        android:layout_height="42dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Nome do animal"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="8dp"
+        android:layout_width="0dp"
+        android:layout_height="41dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginTop="17dp"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="23dp"
+        android:autoText="true"
+        android:ems="10"
+        android:hint="@string/nomeDoAnimal"
+        android:inputType="text"
+        android:maxLines="1"
+        android:singleLine="true"
+        app:layout_constraintHorizontal_bias="0.533"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
+
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Idade:"
-        android:textColor="@color/material_drawer_dark_icons"
         android:textSize="18sp"
-        tools:layout_editor_absoluteY="345dp"
         android:layout_marginLeft="16dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="21dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView9"
+        android:layout_marginStart="16dp" />
 
     <TextView
         android:id="@+id/textView9"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Cor:"
-        android:textColor="@color/material_drawer_dark_icons"
         android:textSize="18sp"
-        tools:layout_editor_absoluteY="298dp"
         android:layout_marginLeft="16dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="22dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView7"
+        android:layout_marginStart="16dp" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Tamanho:"
-        android:textColor="@color/material_drawer_dark_icons"
         android:textSize="18sp"
         android:layout_marginLeft="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+        app:layout_constraintTop_toBottomOf="@+id/textView8"
+        android:layout_marginStart="16dp" />
 
     <Spinner
         android:id="@+id/spinnerCadastroAnimalTamanhoId"
         android:layout_width="207dp"
         android:layout_height="24dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/textView7"
         android:layout_marginLeft="8dp"
-        app:layout_constraintHorizontal_bias="0.092"
+        app:layout_constraintHorizontal_bias="0.0"
         android:layout_marginTop="22dp"
         app:layout_constraintTop_toBottomOf="@+id/spinnerCadastroAnimalRacaId" />
 
@@ -123,80 +135,91 @@
         android:id="@+id/spinnerCadastroAnimalCorId"
         android:layout_width="207dp"
         android:layout_height="24dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/textView9"
         android:layout_marginLeft="8dp"
         app:layout_constraintHorizontal_bias="0.0"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="21dp"
+        android:layout_marginTop="19dp"
         app:layout_constraintTop_toBottomOf="@+id/spinnerCadastroAnimalTamanhoId" />
-
-    <CheckBox
-        android:id="@+id/checkBoxGatoId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:text="Gato"
-        app:layout_constraintHorizontal_bias="0.733"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/checkBoxCaoId"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="151dp" />
-
-    <CheckBox
-        android:id="@+id/checkBoxCaoId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Cachorro"
-        android:layout_marginEnd="67dp"
-        tools:layout_editor_absoluteX="190dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="151dp" />
 
     <Button
         android:id="@+id/botaoCadastrarAnimalId"
-        android:layout_width="344dp"
+        android:layout_width="0dp"
         android:layout_height="48dp"
-        android:text="Cadastrar"
-        android:layout_marginTop="25dp"
-        app:layout_constraintTop_toBottomOf="@+id/botaoEnviarImagemId"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Cadastrar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintHorizontal_bias="0.333" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/botaoEnviarImagemId" />
 
     <Button
         android:id="@+id/botaoEnviarImagemId"
-        android:layout_width="180dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="7dp"
+        android:layout_width="202dp"
+        android:layout_height="48dp"
         android:text="Escolher..."
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toRightOf="@+id/textView13"
+        android:layout_marginRight="16dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="18dp"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerCadastroAnimalIdadeId" />
+        app:layout_constraintLeft_toRightOf="@+id/textView13"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintHorizontal_bias="1.0"
+        android:layout_marginTop="17dp"
+        app:layout_constraintTop_toBottomOf="@+id/spinnerCadastroAnimalIdadeId"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp" />
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="70dp"
         android:layout_height="65dp"
         app:srcCompat="@drawable/icon_app"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
+
+    <CheckBox
+        android:id="@+id/checkBoxCaoId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Cão"
+        android:textAlignment="viewStart"
+        android:textColorLink="#C0321F"
+        android:layout_marginLeft="69dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.061"
+        android:layout_marginTop="18dp"
+        app:layout_constraintTop_toBottomOf="@+id/cadastroAnimalNomeId" />
+
+    <CheckBox
+        android:id="@+id/checkBoxGatoId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Gato"
+        android:textColorLink="#C0321F"
+        android:layout_marginRight="97dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp" />
+        app:layout_constraintHorizontal_bias="1.0"
+        android:layout_marginTop="18dp"
+        app:layout_constraintTop_toBottomOf="@+id/cadastroAnimalNomeId" />
 
 </android.support.constraint.ConstraintLayout>
