--- a/app/src/main/res/layout/activity_cadastro_usuario.xml
+++ b/app/src/main/res/layout/activity_cadastro_usuario.xml
@@ -33,7 +33,8 @@
                     android:hint="@string/prompt_email"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:textAllCaps="false" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -63,7 +64,7 @@
                     android:hint="@string/prompt_endereco"
                     android:inputType="textCapWords"
                     android:maxLines="1"
-                    android:singleLine="true" />
+                    android:singleLine="true"/>
 
             </android.support.design.widget.TextInputLayout>
 
@@ -78,7 +79,7 @@
                     android:hint="@string/prompt_nascimento"
                     android:inputType="date"
                     android:maxLines="1"
-                    android:singleLine="true" />
+                    android:singleLine="true"/>
 
             </android.support.design.widget.TextInputLayout>
 
@@ -97,7 +98,7 @@
                     android:imeOptions="actionUnspecified"
                     android:inputType="textPassword"
                     android:maxLines="1"
-                    android:singleLine="true" />
+                    android:singleLine="true"/>
 
             </android.support.design.widget.TextInputLayout>
 
