--- a/app/src/main/res/layout/activity_cadastro_usuario.xml
+++ b/app/src/main/res/layout/activity_cadastro_usuario.xml
@@ -20,7 +20,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="80dp"
                 android:layout_centerHorizontal="true"
-                app:srcCompat="@drawable/icon_app" />
+                app:srcCompat="@drawable/icon_profile" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Foto perfil"
+                android:gravity="center"/>
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
