--- a/app/src/main/res/layout/grid_animal_detalhes.xml
+++ b/app/src/main/res/layout/grid_animal_detalhes.xml
@@ -142,6 +142,8 @@
         android:layout_marginTop="194dp"
         android:textColor="@color/cardview_light_background"
         android:textSize="36sp"
+        android:maxLines="1"
+        android:text=""
         app:layout_constraintHorizontal_bias="0.025"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
