Tabela animal criada; Cadastro dos bixin

--- a/app/src/main/res/layout/activity_favoritos.xml
+++ b/app/src/main/res/layout/activity_favoritos.xml
@@ -18,6 +18,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/fragment_grid_animal" />
+    <include layout="@layout/content_nenhum_favorito" />
 
 
 </android.support.design.widget.CoordinatorLayout>
